bynkc/tests/fixtures/positive/09_refined_string_nonempty/input.karn
commons demo {
  type Name = String where NonEmpty
}
