bynkc/tests/fixtures/negative/04_predicate_base_mismatch/input.karn
commons demo {
  type Bad = String where NonNegative
}
